# pico-project

./: .gitignore  CMakeLists.txt  LICENSE  README setup.md  README.md  lwipopts.h  main.cpp  pico_sdk.cmake  pico_sdk_template.cmake  pimoroni_pico_sdk.cmake  pimoroni_pico_template.cmake
disk_images/: add-disk.py  fat12_disk_128.img  fat12_disk_64.img
project_libraries/: bootsel.cpp  bootsel.h  buttonmgr.cpp  buttonmgr.h  color.cpp  color.h  diskio.cpp  fes_flash.cpp  fes_flash.h  ffconf.h  fileops.cpp  fileops.h  filesystem.cpp  filesystem.h  littlefs_helper.cpp  littlefs_helper.h  lwipopts.h  msc_disk.cpp  msc_disk.h  myled.cpp  myled.h  myscreen.cpp  myscreen.h  tusb_config.h  usb_descriptors.cpp  usb_msc.cpp  usb_msc.h
project_libraries/usbflash.kk/: flash.c  usb_msc_driver.c
